重新写了两个接口swagger，完成swaggerjson的传输和/apidoc的访问
